--- a/latex/akita.bib
+++ b/latex/akita.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tetsuya Akita at 2022-02-14 11:47:01 +0900 
+%% Created for Tetsuya Akita at 2022-03-09 16:46:01 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,11 +11,10 @@
 @article{WAPLES_2011,
 	author = {Waples, Robin S. and Waples, Ryan K.},
 	date-added = {2022-02-14 11:46:36 +0900},
-	date-modified = {2022-02-14 11:46:36 +0900},
+	date-modified = {2022-03-09 16:45:22 +0900},
 	doi = {10.1111/j.1755-0998.2010.02942.x},
 	issn = {1755-098X},
 	journal = {Mol Ecol Resour},
-	month = {Jan},
 	pages = {162--171},
 	publisher = {Wiley},
 	title = {Inbreeding effective population size and parentage analysis without parents},
@@ -117,14 +116,14 @@
 @article{doi:10.1080/07352689.2010.481167,
 	author = {Mary V. Ashley},
 	date-added = {2022-02-08 15:03:55 +0900},
-	date-modified = {2022-02-08 15:03:55 +0900},
+	date-modified = {2022-03-09 16:46:01 +0900},
 	doi = {10.1080/07352689.2010.481167},
 	eprint = {https://doi.org/10.1080/07352689.2010.481167},
 	journal = {Critical Reviews in Plant Sciences},
 	number = {3},
 	pages = {148-161},
 	publisher = {Taylor & Francis},
-	title = {Plant Parentage, Pollination, and Dispersal: How DNA Microsatellites Have Altered the Landscape},
+	title = {Plant Parentage, Pollination, and Dispersal: How {DNA} Microsatellites Have Altered the Landscape},
 	url = {https://doi.org/10.1080/07352689.2010.481167},
 	volume = {29},
 	year = {2010},
@@ -170,12 +169,11 @@
 	abstract = {{We present practical lessons learned from applying the recent close-kin mark--recapture (CKMR) abundance estimation method to thornback ray (Raja clavata). For CKMR, related individuals are identified from their genotypes and their number and pattern is used for abundance estimation. We genotyped over 7000 individuals collected in the Bay of Biscay using Single Nucleotide Polymorphism (SNP) markers finding 99 parent--offspring pairs. The estimated number of adult thornback rays in the central Bay of Biscay was around 135000 (CV 0.19) in 2013. In total, four lessons were drawn: (i) CKMR helps identifying metapopulation structure, which if ignored might affect abundance estimates and/or time trends. There was strong evidence for two distinct local populations of thornback ray with no demographic connectivity. (ii) Demographic sample composition can affect precision and needs to include a range of birth years, which turned out to be difficult for thornback ray. (iii) Reasonable age information for potential offspring is essential. (iv) The sex of potential parents is needed and might be identified from sex-related SNPs. Reliable abundance estimation by CKMR appears feasible for a wide range of species provided that: sampling adequately covers potential local population structure, has appropriate demographic composition, and the age of potential offspring is reasonably well-known.}},
 	author = {Trenkel, Verena M and Charrier, Gr{\'e}gory and Lorance, Pascal and Bravington, Mark V},
 	date-added = {2022-02-07 15:06:23 +0900},
-	date-modified = {2022-02-07 15:06:23 +0900},
+	date-modified = {2022-03-09 16:45:04 +0900},
 	doi = {10.1093/icesjms/fsac002},
 	eprint = {https://academic.oup.com/icesjms/advance-article-pdf/doi/10.1093/icesjms/fsac002/42257559/fsac002.pdf},
 	issn = {1054-3139},
 	journal = {ICES Journal of Marine Science},
-	month = {01},
 	note = {fsac002},
 	title = {{Close-kin mark--recapture abundance estimation: practical insights and lessons learned}},
 	url = {https://doi.org/10.1093/icesjms/fsac002},
@@ -237,12 +235,11 @@
 	abstract = {{A new Bayesian method that uses individual multilocus genotypes to estimate rates of recent immigration (over the last several generations) among populations is presented. The method also estimates the posterior probability distributions of individual immigrant ancestries, population allele frequencies, population inbreeding coefficients, and other parameters of potential interest. The method is implemented in a computer program that relies on Markov chain Monte Carlo techniques to carry out the estimation of posterior probabilities. The program can be used with allozyme, microsatellite, RFLP, SNP, and other kinds of genotype data. We relax several assumptions of early methods for detecting recent immigrants, using genotype data; most significantly, we allow genotype frequencies to deviate from Hardy-Weinberg equilibrium proportions within populations. The program is demonstrated by applying it to two recently published microsatellite data sets for populations of the plant species Centaurea corymbosa and the gray wolf species Canis lupus. A computer simulation study suggests that the program can provide highly accurate estimates of migration rates and individual migrant ancestries, given sufficient genetic differentiation among populations and sufficient numbers of marker loci.}},
 	author = {Wilson, Gregory A and Rannala, Bruce},
 	date-added = {2022-02-02 19:01:15 +0900},
-	date-modified = {2022-02-02 19:01:24 +0900},
+	date-modified = {2022-03-09 16:45:34 +0900},
 	doi = {10.1093/genetics/163.3.1177},
 	eprint = {https://academic.oup.com/genetics/article-pdf/163/3/1177/42048248/genetics1177.pdf},
 	issn = {1943-2631},
 	journal = {Genetics},
-	month = {03},
 	number = {3},
 	pages = {1177-1191},
 	title = {{Bayesian Inference of Recent Migration Rates Using Multilocus Genotypes}},
@@ -255,12 +252,11 @@
 	abstract = {{We describe a model-based clustering method for using multilocus genotype data to infer population structure and assign individuals to populations. We assume a model in which there are K populations (where K may be unknown), each of which is characterized by a set of allele frequencies at each locus. Individuals in the sample are assigned (probabilistically) to populations, or jointly to two or more populations if their genotypes indicate that they are admixed. Our model does not assume a particular mutation process, and it can be applied to most of the commonly used genetic markers, provided that they are not closely linked. Applications of our method include demonstrating the presence of population structure, assigning individuals to populations, studying hybrid zones, and identifying migrants and admixed individuals. We show that the method can produce highly accurate assignments using modest numbers of loci---e.g., seven microsatellite loci in an example using genotype data from an endangered bird species. The software used for this article is available from http://www.stats.ox.ac.uk/~pritch/home.html.}},
 	author = {Pritchard, Jonathan K and Stephens, Matthew and Donnelly, Peter},
 	date-added = {2022-02-02 18:32:52 +0900},
-	date-modified = {2022-02-02 18:33:10 +0900},
+	date-modified = {2022-03-09 16:45:41 +0900},
 	doi = {10.1093/genetics/155.2.945},
 	eprint = {https://academic.oup.com/genetics/article-pdf/155/2/945/42030266/genetics0945.pdf},
 	issn = {1943-2631},
 	journal = {Genetics},
-	month = {06},
 	number = {2},
 	pages = {945-959},
 	title = {{Inference of Population Structure Using Multilocus Genotype Data}},
@@ -285,12 +281,11 @@
 	abstract = {{Likelihood methods have been developed to partition individuals in a sample into sibling clusters using genetic marker data without parental information. Most of these methods assume either both sexes are monogamous to infer full sibships only or only one sex is polygamous to infer full sibships and paternal or maternal (but not both) half sibships. We extend our previous method to the more general case of both sexes being polygamous to infer full sibships, paternal half sibships, and maternal half sibships and to the case of a two-generation sample of individuals to infer parentage jointly with sibships. The extension not only expands enormously the scope of application of the method, but also increases its statistical power. The method is implemented for both diploid and haplodiploid species and for codominant and dominant markers, with mutations and genotyping errors accommodated. The performance and robustness of the method are evaluated by analyzing both simulated and empirical data sets. Our method is shown to be much more powerful than pairwise methods in both parentage and sibship assignments because of the more efficient use of marker information. It is little affected by inbreeding in parents and is moderately robust to nonrandom mating and linkage of markers. We also show that individually much less informative markers, such as SNPs or AFLPs, can reach the same power for parentage and sibship inferences as the highly informative marker simple sequence repeats (SSRs), as long as a sufficient number of loci are employed in the analysis.}},
 	author = {Wang, J and Santure, A W},
 	date-added = {2022-01-19 14:38:46 +0900},
-	date-modified = {2022-01-19 14:39:04 +0900},
+	date-modified = {2022-03-09 16:45:28 +0900},
 	doi = {10.1534/genetics.108.100214},
 	eprint = {https://academic.oup.com/genetics/article-pdf/181/4/1579/42091234/genetics1579.pdf},
 	issn = {1943-2631},
 	journal = {Genetics},
-	month = {04},
 	number = {4},
 	pages = {1579-1594},
 	title = {{Parentage and Sibship Inference From Multilocus Genotype Data Under Polygamy}},
@@ -388,14 +383,14 @@
 	abstract = {Abstract This study develops a nearly unbiased estimator of the ratio of the contemporary effective mother size to the census size in a population, as a proxy of the ratio of contemporary effective size (or effective breeding size) to census size (Ne/N or Nb/N). The proposed estimator is based on both known mother--offspring (MO) and maternal-sibling (MS) relationships observed within the same cohort, in which sampled individuals in the cohort probably share MO relationships with sampled mothers. The rationale is that the frequency of MO and MS pairs contains information regarding the contemporary effective mother size and the (mature) census size, respectively. Therefore, the estimator can be obtained only from genetic data. We also evaluate the performance of the estimator by running an individual-based model. The results of this study provide the following: (a) parameter range for satisfying the unbiasedness, and (b) guidance for sample sizes to ensure the required accuracy and precision, especially when the order of the ratio is available. Furthermore, the results demonstrate the usefulness of a sibship assignment method for genetic monitoring, providing insights for interpreting environmental and/or anthropological factors fluctuating Ne/N (or Nb/N), especially in the context of conservation biology and wildlife management.},
 	author = {Akita, Tetsuya},
 	date-added = {2022-01-12 09:30:43 +0900},
-	date-modified = {2022-01-12 09:31:01 +0900},
+	date-modified = {2022-03-09 16:43:15 +0900},
 	doi = {https://doi.org/10.1002/ece3.6421},
 	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.6421},
 	journal = {Ecology and Evolution},
 	keywords = {close-kin mark-recapture, effective population size, overdispersed reproduction, sibship assignment},
 	number = {19},
 	pages = {10343-10352},
-	title = {Nearly unbiased estimator of contemporary Ne/N based on kinship relationships},
+	title = {Nearly unbiased estimator of contemporary {N}e/{N} based on kinship relationships},
 	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ece3.6421},
 	volume = {10},
 	year = {2020},
@@ -423,10 +418,9 @@
 @article{ecolevol2021p,
 	author = {Prystupa, Samuel and McCracken, Gregory and Perry, Robert and Ruzzante, Daniel},
 	date-added = {2021-08-19 15:09:27 +0900},
-	date-modified = {2021-08-19 15:10:11 +0900},
+	date-modified = {2022-03-09 16:45:10 +0900},
 	doi = {10.1002/ece3.7378},
 	journal = {Ecology and Evolution},
-	month = {04},
 	title = {Population abundance in arctic grayling using genetics and close-kin mark-recapture},
 	volume = {11},
 	year = {2021},
