--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -235,7 +235,7 @@ and by combining $\widehat{m_1}$ and $\widehat{m_2}$ for the migration rate:
 \widehat{m_3} &= \frac{ N_{2} \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) } {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right)}.
 \label{AP-2}
 \end{align}
-For those estimators, $\widetilde{H}_{\rm HS,bet}$ and $\widetilde{H}_{\rm PO,bet}$ are weighted by sample size $n_{\rm O, 2}$ and $n_{\rm P, 2}$, respectively. 
+For those estimators, $\widetilde{H}_{\rm HS,bet}$ and $\widetilde{H}_{\rm PO,bet}$ are weighted by $2n_{\rm O, 2}$ and $n_{\rm P, 2}$, respectively. 
 
 \subsection{Estimation of parent number by PO pairs in a population}
 
@@ -277,7 +277,7 @@ The proposed estimators are derived under the assumption that reproductive poten
 
 \subsection{Individual-based model}
 
-We developed an individual-based model that tracks kinship relationships to evaluate the performance of the estimators. Here, the population structure was assumed to be identical to that in the development of the estimators. Population 1 and 2 comprised $N_1$ and $N_2$ parents with an equal sex ratio, and their offspring number was assumed to follow the geometric distribution with mean ${\bar \lambda_1}$ and ${\bar \lambda_2}$ (i.e., Poisson reproduction with mean $\lambda_{i,1}$ and $\lambda_{j,2}$, which follows the exponential distribution with mean ${\bar \lambda_1}$ and ${\bar \lambda_2}$), respectively. Migrant parents were selected randomly from population 1 at the end of the first year, and each offspring retained IDs of the parents, thereby making it possible to trace an HS and PO relationship.
+We developed an individual-based model that tracks kinship relationships to evaluate the performance of the estimators. Here, the population structure was assumed to be identical to that in the development of the estimators. Population 1 and 2 comprised $N_1$ and $N_2$ parents with an equal sex ratio, and their offspring number was assumed to follow the geometric distribution with mean ${\bar \lambda_1}$ and ${\bar \lambda_2}$ (i.e., Poisson reproduction with mean $\lambda_{i,1}$ and $\lambda_{j,2}$, which follows the exponential distribution with mean ${\bar \lambda_1}$ and ${\bar \lambda_2}$), respectively. Migrant parents were selected randomly from population 1 at the end of the first year, and each offspring retained IDs of the parents, thereby making it possible to trace a HS and PO relationship.
 
 Here, the parameter set ($N_1$, $N_2$, $M$, ${\bar \lambda_1}$, ${\bar \lambda_2}$, $n_{\rm O,1}$, $n_{\rm O,2}$, $n_{\rm P,1}$, $n_{\rm P,2}$) is given. We simulated a population history and a sampling process, which generates proposed estimators. Note that this process was repeated 1000 times, which allows us to construct the distribution of the estimators for each parameter set. All scripts (written by C{++} and R languages) and documentation for these analyses are available at https://github.com/teTUNAakita/CKMRmig.
 
@@ -291,13 +291,13 @@ We evaluated the performance of ${\hat M}$s or ${\hat m}$s numerically for a cas
 \end{center}
 %%%%%%%%%%%%%%
 
-First, we evaluated the accuracy of ${\hat M}$s based on the relative bias. As expected, for most of the investigated parameter sets, we observed that their relative bias was less than 5\%, as shown in {\bf Table S1} in {\bf Supporting Information}. Thus, when the assumption that kinships are detected without any error is satisfied, it is reasonable to consider ${\hat M}$s nearly unbiased estimators. 
+First, we evaluated the accuracy of ${\hat M}$s based on the relative bias. As expected, for most of the investigated parameter sets, we observed that their relative bias was less than 5\%, as shown in {\bf Table S1} in {\bf Supporting Information}. Thus, when the assumptions that (i) offspring and parents are randomly sampled, (ii) kinships are detected without any error, and (iii) the migration event does not depend on the degree of reproductive potential, are satisfied, it is reasonable to consider ${\hat M}$s nearly unbiased estimators. 
 
 Next, we evaluated the precision of ${\hat M}$s based on the CV value. {\bf Table S1} in {\bf Supporting Information} shows the CV value, and the violin plot in {\bf Figure~\ref{violins}} visualizes the degree of precision. For each estimator ${\hat M}$, we found that precision increases with increasing sample size. Note that the total sample size depends on the estimator. For example, $n=50$ in Fig.~\ref{violins}, the total sample sizes of ${\hat M_1}$, ${\hat M_2}$, ${\hat M_3}$, ${\hat M_4}$, and ${\hat M_5}$ were 100 ($=n_{\rm O,1}+n_{\rm O,2}$), 100 ($=n_{\rm O,1}+n_{\rm P,2}$), 150 ($=n_{\rm O,1}+n_{\rm O,2}+n_{\rm P,2}$), 150 ($=n_{\rm O,1}+n_{\rm O,2}+n_{\rm P,2}$), and 200 ($=n_{\rm O,1}+n_{\rm O,2}+n_{\rm P,1}+n_{\rm P,2}$), respectively. 
 
-As the sample size or number of migrants increase, precision increases, and the shape of the distribution asymptotically becomes symmetric ({\bf Fig.~\ref{violins}}) because an increasing sample size or increasing number of migrants is likely to increase the observed number of kinship pairs found between the two populations ($\widetilde{H}_{\rm HS,bet}$ or $\widetilde{H}_{\rm PO,bet}$) and decreases the variance of those kinship pair numbers. In addition, the number of PO pairs in a given population ($\widetilde{H}_{\rm PO,1}$ or $\widetilde{H}_{\rm PO,2}$) contributes to the precision of estimating $N_1$ or $N_1$, respectively, thereby providing ${\hat M_4}$ and ${\hat M_5}$ with higher precision. 
+As the sample size or number of migrants increase, precision increases, and the shape of the distribution asymptotically becomes symmetric ({\bf Fig.~\ref{violins}}) because an increasing sample size or increasing number of migrants is likely to increase the observed number of kinship pairs found between the two populations ($\widetilde{H}_{\rm HS,bet}$ or $\widetilde{H}_{\rm PO,bet}$) and decreases the variance of those kinship pair numbers. In addition, the number of PO pairs in a given population ($\widetilde{H}_{\rm PO,1}$ or $\widetilde{H}_{\rm PO,2}$) contributes to the precision of estimating $N_1$ or $N_2$, respectively, thereby providing ${\hat M_4}$ and ${\hat M_5}$ with a relatively high precision. 
 
-Note that our simulation can handle case with and without invasive sampling. Invasive sampling potentially affects the level of $m$ because the sampled parents from population 1 have no chance to move to population 2; thus, such parents cannot be sampled. In this case, $m$ should be defined by $M/(N_1-n_{P,1})$ rather than $M/N_1$, although this does not affect the estimator ${\hat M}$s, as demonstrated in {\bf Table S1} ({\bf Supporting Information}). 
+Note that our simulation can handle case with and without invasive sampling. Invasive sampling potentially affects the level of $m$ because the sampled parents from population 1 have no chance to move to population 2; thus, such parents cannot be sampled. In this case, $m$ might be defined by $M/(N_1-n_{P,1})$ rather than $M/N_1$, although this does not affect the estimator ${\hat M}$s, as demonstrated in {\bf Table S1} ({\bf Supporting Information}). 
 
 Finally, we investigated the case where the parental number in population 1 is much greater in population 2 (i.e., $N_1 \gg N_2$); thus, migrants represent a  large proportion of $N_2$. For such cases, e.g., $(N_1,N_2,M)=(10^4,10^3,500)$, we confirmed the similar property of ${\hat M}$s to the $N_1 = N_2$ situation, as shown in {\bf Table S1} ({\bf Supporting Information}), which suggests the robustness of ${\hat M}$s in the presence of heterogeneous population sizes.   
 
@@ -305,13 +305,13 @@ Finally, we investigated the case where the parental number in population 1 is m
 
 In this study, we theoretically developed estimators for the contemporary migration number (${\hat M_1}$--${\hat M_5}$) and migration rate (${\hat m_1}$--${\hat m_4}$) of parents between two predefined populations in iteroparous species. The proposed estimators are based on the known PO relationship and HS relationships observed between and within the two populations without any error in terms of kinship assignment. Users can select the appropriate estimator for cases where the parental number of population 1 ($N_1$) and/or that of population 2 ($N_2$) is known ({\bf Table~\ref{parameter}}). The performance of the estimator (accuracy and precision) was evaluated quantitatively by performing an individual-based simulation ({\bf Fig.~\ref{violins}} and {\bf Table S1} in {\bf Supporting Information}). The proposed modeling framework utilizes several types of reproductive variations (i.e., the number of survived offspring per parent), including the variance of reproductive potential within and between populations, in consideration of several situations, including a body-size structure or environmental heterogeneity for reproductive success.
 
-Our primary contributions are summarized as follows. First, we formulated the probabilities of kinship pairs randomly selected between two populations ($\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$), which provides migration number or rate estimators. While similar derivations may be found in the (nongenetic) MR method, these are limited to cases where sampling is non-invasive and adult individuals are sampled. The proposed method can avoid these limitations, where such an advantages is characterized by the CKMR method for estimating population sizes. Second, we have demonstrated that the probabilities of kinship pairs are approximately independent of the reproductive potential; thus, information about it is not required to realize the estimation provided that migration is assumed to occur independently of the reproductive potential. This is a useful property of the estimators because it is natural that heterogeneity of reproductive potential within and between populations exits in iteroparous species but its observation is generally difficult. Third, we have demonstrated that estimators can be obtained using only genetic data (i.e., ${\hat M_5}$ and ${\hat m_4}$). There are several advantages in using the proposed estimator rather than estimating $\pi_{\rm HS,bet}$ (and/or $\pi_{\rm PO,bet}$) separately (via a genetic method) and $N_1$ (and/or $N_2$) (via a nongenetic method), including simplified sampling processes and analyzing designs and the availability of a unified framework of genetic analyses for detecting HS and PO pairs (similar discussion is found for estimating the ratio of effective breeding size to the census size, $N_{\rm b}/N$, in \cite{Akita_2020}). 
+Our primary contributions are summarized as follows. First, we formulated the probabilities of kinship pairs randomly selected between two populations ($\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$), which provides migration number or rate estimators. While similar derivations may be found in the (nongenetic) MR method, these are limited to cases where sampling is non-invasive and adult individuals must be sampled. The proposed method can avoid these limitations, where such an advantages is characterized by the CKMR method for estimating population sizes. Second, we have demonstrated that the probabilities of kinship pairs are approximately independent of the reproductive potential; thus, information about it is not required to realize the estimation provided that migration is assumed to occur independently of the reproductive potential. This is a useful property of the estimators because it is natural that heterogeneity of reproductive potential within and between populations exits in iteroparous species but its observation is generally difficult. Third, we have demonstrated that estimators can be obtained using only genetic data (i.e., ${\hat M_5}$ and ${\hat m_4}$). There are several advantages in using the proposed estimator rather than estimating $\pi_{\rm HS,bet}$ (and/or $\pi_{\rm PO,bet}$) separately (via a genetic method) and $N_1$ (and/or $N_2$) (via a nongenetic method), including simplified sampling processes and analyzing designs and the availability of a unified framework of genetic analyses for detecting HS and PO pairs (similar discussion is found for estimating the ratio of effective breeding size to the census size, $N_{\rm b}/N$, in \cite{Akita_2020}). 
 
 To estimate the contemporary migration number or migration rate, our simulation-based results provide sample size guidance to ensure the required accuracy and precision, especially if the order of the number of migrant parents and parental sizes are approximately known ({\bf Table S1} in {\bf Supporting Information}). For example, when $m=0.1$ and $N_1=N_2=10^3$, sampling 10\% and 20\% of the parents and an equal number of offspring in both populations leads to 70\% and 39\% CV of ${\hat M_5}$, respectively (in the invasive sampling case). Even no information is available about these numbers, $1/\sqrt{H_{\rm HS, bet}}$ (or $1/\sqrt{H_{\rm PO, bet}}$) provides an approximate lower bound on the CV, which can be used as an indicator of the precision of ${\hat M}$ or ${\hat m}$. In addition, the condition that $n>\sqrt{N_2}$ is also used as rule of thumb especially when planning a research project ($n = n_{\rm O, 1}=n_{\rm O, 2}=n_{\rm P, 2}$; refer to Equations~\ref{RS-1} and \ref{RS-2}). Note that the guidance is to estimate the information about one-way migration between two populations; thus, estimating two-way migrations among two or three populations would require twice and three times the number of samples, respectively, compared to our sample size guidance. 
 
-We believe there are several scenarios where the proposed estimator may be beneficial. The first case is where there is a large number of migrants between populations, e.g., $M>100$, which eliminates population differentiation and thus hampers the detection of the $M$ via population genetics method if $M$ is interpreted as an effective migration number. Information about movement between populations is essential to assess population dynamics in the conservation and management contexts, even if the migrant number is so large that it cannot be genetically assigned to two populations. The second case involves genetic monitoring conducted for each reproductive period (e.g., annually) because the proposed estimators consider information about contemporary migration that is explicitly specified the timing (e.g., year); thus, the time-series data for migration may reflect environmental changes, and this would provide insights into the underlying ecological processes. In addition, HS pairs found within the genetic population provide $N_{\rm b}$ \cite[]{wang2009new,WAPLES_2011}, which is also used to assess genetic health. The third is the case involves the development of integrated models that combine several data sources into a single analysis \cite[]{MAUNDER201361}. An example of this direction is to provide additional information about migration to ongoing CKMR projects for stock assessment in fisheries \cite[e.g.,][]{Bravington_2016,Hillary_2018,https://doi.org/10.1002/ece3.6296,ecolevol2021p,10.1093/icesjms/fsac002}, which would utilize kinship pairs for simultaneous estimation of population parameters. If the population structure is defined hypothetically, the data accumulated in such projects could be readily connected to our theory via likelihood methods. The fourth case is where sampling adults is difficult due to conservation practices or other reasons but instead sampling offspring is relatively easy. In such cases, although $N_2$ (and $N_1$) must be given externally to employ $\hat m_1$ (and $\hat M_1$), there is presently no existing method to estimate adult movement, especially when two populations cannot be genetically distinct, which indicates that the proposed method has the potential to expand the scope of current population monitoring techniques. 
+We believe there are several scenarios where the proposed estimator may be beneficial. The first case is where there is a large number of migrants between populations, e.g., $M>100$, which eliminates population differentiation and thus hampers the detection of the $M$ via population genetics method if $M$ is interpreted as an effective migration number. Information about movement between populations is essential to assess population dynamics in the conservation and management contexts, even if the migrant number is so large that it cannot be genetically assigned to two populations. The second case involves genetic monitoring conducted for each reproductive period (e.g., annually) because the proposed estimators consider information about contemporary migration that is explicitly specified the timing (e.g., year); thus, the time-series data for migration may reflect environmental changes, and this would provide insights into the underlying ecological processes. In addition, HS pairs found within the same cohort in the genetic population provide $N_{\rm b}$ \cite[]{wang2009new,WAPLES_2011}, which is also used to assess genetic health. The third is the case involves the development of integrated models that combine several data sources into a single analysis \cite[]{MAUNDER201361}. An example of this direction is to provide additional information about migration to ongoing CKMR projects for stock assessment in fisheries \cite[e.g.,][]{Bravington_2016,Hillary_2018,https://doi.org/10.1002/ece3.6296,ecolevol2021p,10.1093/icesjms/fsac002}, which would utilize kinship pairs for simultaneous estimation of population parameters. If the population structure is defined hypothetically, the data accumulated in such projects could be readily connected to our theory via likelihood methods. The fourth case is where sampling adults is difficult due to conservation practices or other reasons but instead sampling offspring is relatively easy. In such cases, although $N_2$ (and $N_1$) must be given externally to employ $\hat m_1$ (and $\hat M_1$), there is presently no existing method to estimate adult movement, especially when two populations cannot be genetically distinct, which indicates that the proposed method has the potential to expand the scope of current population monitoring techniques. 
 
-Finally, we discuss some caveats in terms of applying the proposed method. Our theory for developing the estimators assumes that kinships are detected without error. Many algorithms can be used to detect kinship pairs from single nucleotide polymorphisms or short tandem repeats \cite[e.g., ][]{Wang_2009Genetics, Huisman_2017}, although a HS pair requires many more DNA markers than a PO pair. In addition, iteroparous species may has several kinship types e.g., half-uncle--nephew or half-cousins, which are expected to appear frequently and should be accurately differentiated from HS pairs. It is desirable to estimate in advance how many markers are required for kinship detection in the target populations associated with simulation of pedigree reconstruction (e.g., \cite{Anderson_2020}). Note that the proposed estimators are limited to detecting parental movements on a period between breeding seasons in the given populations. Thus, the estimation of fine-scale spatiotemporal movements, which is available to integrate data sources \cite[]{Thorson_2021}, is beyond the scope of this paper. Although population dynamics models with coarser spatial resolution than the spatial scale of environmental layers are frequently used in assessment models, i.e., the target application of the proposed method, the proposed estimators require pre-specification of the population structure. Kinship relationships with sample location information potentially realize the ability to explore a plausible population structure by estimating the migration number or rate between hypothetical populations, which is expected to contribute the determination of a management unit. In addition, the current theory behind the estimators does not assume desynchronized reproduction within a population (e.g., skip spawning), correlation between individual mobility and fertility, and nonrandom sampling of parents (e.g., mothers with a large number of offspring are likely to be sampled). These issues will be the focus of future work.
+Finally, we discuss some caveats in terms of applying the proposed method. Our theory for developing the estimators assumes that kinships are detected without error. Many algorithms can be used to detect kinship pairs from single nucleotide polymorphisms or short tandem repeats \cite[e.g., ][]{Wang_2009Genetics, Huisman_2017}, although a HS pair requires many more DNA markers than a PO pair. In addition, iteroparous species may has several kinship types, e.g., half-uncle--nephew or half-cousins, which are expected to appear frequently and should be accurately differentiated from HS pairs. It is desirable to estimate in advance how many markers are required for kinship detection in the target populations associated with simulation of pedigree reconstruction (e.g., \cite{Anderson_2020}). The proposed estimators are limited to detecting parental movements on a period between breeding seasons in the given populations. Thus, the estimation of fine-scale spatiotemporal movements, which is available to integrate data sources \cite[]{Thorson_2021}, is beyond the scope of this paper. Although population dynamics models with coarser spatial resolution than the spatial scale of environmental layers are frequently used in assessment models, i.e., the target application of the proposed method, the proposed estimators require pre-specification of the population structure. Kinship relationships with sample location information potentially realize the ability to explore a plausible population structure by estimating the migration number or rate between hypothetical populations, which is expected to contribute the determination of a management unit. In addition, the current theory behind the estimators does not assume desynchronized reproduction within a population (e.g., skip spawning), correlation between individual mobility and fertility, and nonrandom sampling of parents (e.g., mothers with a large number of offspring are likely to be sampled). These issues will be the focus of future work.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{ACKNOWLEDGMENTS}
@@ -461,7 +461,7 @@ Here, we introduce the concept of the reproductive potentials of parents $i$ and
 \section*{APPENDIX 2}
 \section*{Derivation of Equations~\ref{HS-1} and \ref{PO-1} when reproductive potential is variable among parents}
 
-In the main text, we ignore the variation of reproductive potential among parents (i.e., both $\lambda_{i,1}$ and $\lambda_{j,2}$ are constant) to derive $\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$. Here, let $k_{i,1}$ and $k_{j,2}$ be the number of surviving offspring of parents $i$ and $j$ at sampling time in populations 1 and 2, and assumed to follow a kind of discrete distribution (e.g., Poisson or negative binomial distribution) with mean $\lambda_{i,1}$ and $\lambda_{j,2}$, respectively. Without loss of generality, we set the index such that parents with $i=1$ to $M$ in population 1 and $j=1$ to $M$ in population 2 are identical migrants. For example, the parent with $i=1$ reproduces $k_{1,1}$ offspring (in population 1) and then reproduce $k_{1,2}$ offspring (in population 2) after migration. Given $k_{i,1}$ and $k_{j,2}$, the conditional probability that two offspring sampled in populations 1 and 2 share an HS relationship is expressed as follows: 
+In the main text, we ignore the variation of reproductive potential among parents (i.e., both $\lambda_{i,1}$ and $\lambda_{j,2}$ are constant) to derive $\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$. Here, let $k_{i,1}$ and $k_{j,2}$ be the number of surviving offspring of parents $i$ and $j$ at sampling time in populations 1 and 2, and assumed to follow a kind of discrete distribution (e.g., Poisson or negative binomial distribution) with mean $\lambda_{i,1}$ and $\lambda_{j,2}$, respectively. Without loss of generality, we set the index such that parents with $i=1$ to $M$ in population 1 and $j=1$ to $M$ in population 2 are identical migrants. For example, the parent with $i=1$ reproduces $k_{1,1}$ offspring (in population 1) and then reproduce $k_{1,2}$ offspring (in population 2) after migration. Given $k_{i,1}$ and $k_{j,2}$, the conditional probability that two offspring sampled in populations 1 and 2 share a HS relationship is expressed as follows: 
 \begin{align}
 \pi_{\rm HS,bet} | _{\boldsymbol{k_1, k_2}} &= \frac{ 2\sum_{i=1}^M k_{i,1} } { \sum_{i=1}^{N_1} k_{i,1} } \frac{ 2\sum_{j=1}^M k_{j,2} } { \sum_{j=1}^{N_2} k_{j,2} } \frac{1}{M}, 
 \end{align}
@@ -481,7 +481,7 @@ where $\boldsymbol{\lambda_1}=(\lambda_{1,1}, \ldots, \lambda_{M,1}, \ldots, \la
 &= \frac{4M}{N_{1}N_{2}},
 \label{App2}
 \end{align}
-which provides the same formulation described in Eq.\ref{HS-1}. Note that, from the third to forth lines, we assume that $\lambda_{l,1}$ and $\lambda_{l,2}$ ($l = 1, \ldots, M$) are independent variables (i.e., $\mathbb{E}[\lambda_{l,1}\lambda_{l,2}] = {\bar \lambda_{1}}{\bar \lambda_{2}}$), which implies variable reproductive potential of an identical parent before and after migration. 
+which provides the same formulation described in Equation~\ref{HS-1}. Note that, from the third to forth lines, we assume that $\lambda_{l,1}$ and $\lambda_{l,2}$ ($l = 1, \ldots, M$) are independent variables (i.e., $\mathbb{E}[\lambda_{l,1}\lambda_{l,2}] = {\bar \lambda_{1}}{\bar \lambda_{2}}$), which implies variable reproductive potential of an identical parent before and after migration. 
 
 Next, we derive the probability that offspring sampled in population 1 and a parent sampled in population 2 share a PO relationship ($\pi_{\rm PO,bet}$) under the flexible settings of $\lambda$, which is similar to the derivation of $\pi_{\rm HS,bet}$. The conditional probability is expressed as follows:
 \begin{align}
@@ -504,7 +504,7 @@ In the derivation of $\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$ in {\bf Appendix 
 &= \frac{4}{M} \frac{ M^2 {\bar \lambda_{M,1}} {\bar \lambda_{M,2}} } { \left( M {\bar \lambda_{M,1}} + (N_1 - M) {\bar \lambda_1} \right) \left( M {\bar \lambda_{M,2}} + (N_2 - M) {\bar \lambda_2} \right)}.
 \label{App3}
 \end{align}
-If ${\bar \lambda_{M,1}} = {\bar \lambda_{1}}$ and ${\bar \lambda_{M,2}} = {\bar \lambda_{2}}$, Eq.~\ref{App3} can be reduced Eq.\ref{App2}. This formulation includes reproductive potential terms such that the distinct reproductive potential between migrants and nonmigrants eliminates the usefulness of the proposed HS-based estimators (this is also applied to the proposed PO-based estimators). 
+If ${\bar \lambda_{M,1}} = {\bar \lambda_{1}}$ and ${\bar \lambda_{M,2}} = {\bar \lambda_{2}}$, Equation~\ref{App3} can be reduced Equation~\ref{App2}. This formulation includes reproductive potential terms such that the distinct reproductive potential between migrants and nonmigrants eliminates the usefulness of the proposed HS-based estimators (this is also applied to the proposed PO-based estimators). 
 
 \clearpage
 
